# Ago_Slider_ESP32

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  sdkconfig  sdkconfig.debug  sdkconfig.defaults  sdkconfig.release  vscode.code-workspace
.claude/skills/flash/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
components/app_config/: CMakeLists.txt
components/app_config/include/: app_config.h
components/app_config/src/: app_config.c
components/ble/: CMakeLists.txt
components/ble/include/: ble.h  ota.h
components/ble/src/: ble.c  ota.c
components/i2c_manager/: CMakeLists.txt
components/i2c_manager/include/: i2c_manager.h
components/i2c_manager/src/: i2c_manager.c
components/ina219/: CMakeLists.txt
components/ina219/include/: ina219.h
components/ina219/src/: ina219.c
components/motion/: CMakeLists.txt
components/motion/include/: motion.h  motion_scenario.h
components/motion/src/: motion.cpp  motion_scenario.cpp  scenario_focus.cpp
components/nvs_config/: CMakeLists.txt
components/nvs_config/include/: nvs_config.h
components/nvs_config/src/: nvs_config.c
components/ota/: CMakeLists.txt
components/ota/include/: ota.h
components/ota/src/: ota.c
components/pca9555/: CMakeLists.txt
components/pca9555/include/: PCA9555.h
components/pca9555/src/: PCA9555.c  pca9555.c
components/tmc2130/: CMakeLists.txt
components/tmc2130/include/: tmc2130.h  tmc2130_trinamic.h
components/tmc2130/src/: TMC2130.c  tmc2130.c  (+1 more)
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
